버전 1.1.3 으로 업그레이드

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
-  "recommendations": ["octref.vetur"],
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "octref.vetur"
+  ],
   "unwantedRecommendations": [
     "hookyqr.beautify",
     "dbaeumer.jshint",
