공통 메소드, 상태변화 믹스인 추가.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
   "eslint.autoFixOnSave": true,
   "files.associations": {
     "*.vue": "vue"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
 }
