--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,72 @@
 {
-  "prettier.disableLanguages": [],
-  "vetur.experimental.templateInterpolationService": true,
-  "eslint.validate": ["javascript", { "autoFix": true, "language": "vue" }],
+  "attrsSorter.order": [
+    "is",
+    "v-for",
+    "v-if",
+    "v-else-if",
+    "v-else",
+    "v-show",
+    "v-cloak",
+    "v-once",
+    "v-pre",
+    "id",
+    "ref",
+    "key",
+    "v-slot",
+    "v-slot.+",
+    "#.*",
+    "slot",
+    "v-model",
+    "v-model.+",
+    "v-bind",
+    "v-bind.+",
+    ":.+",
+    "v-text",
+    "v-text.+",
+    "v-html",
+    "v-html.+",
+    "class",
+    "v-on.+",
+    "@.+",
+    "name",
+    "data-.+",
+    "ng-.+",
+    "src",
+    "for",
+    "type",
+    "href",
+    "values",
+    "title",
+    "alt",
+    "role",
+    "aria-.+",
+    "$unknown$"
+  ],
+  "todohighlight.isEnable": true,
+  "todohighlight.include": [
+    "**/*.js",
+    "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.html",
+    "**/*.php",
+    "**/*.css",
+    "**/*.scss",
+    "**/*.vue",
+    "**/*.styl"
+  ],
+  "workbench.iconTheme": "vscode-icons",
+  "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "prettier.tabWidth": 2,
-  "prettier.useTabs": false,
-  "window.zoomLevel": 0,
-  "endOfLine": "auto",
-  "eslint.autoFixOnSave": true,
-  "files.associations": {
-    "*.vue": "vue"
-  },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+      "source.fixAll": true
+  },
+  "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+  "javascript.format.placeOpenBraceOnNewLineForControlBlocks": false,
+  "javascript.format.placeOpenBraceOnNewLineForFunctions": false,
+  "typescript.format.insertSpaceBeforeFunctionParenthesis": true,
+  "typescript.format.placeOpenBraceOnNewLineForControlBlocks": false,
+  "typescript.format.placeOpenBraceOnNewLineForFunctions": false,
+  "vetur.format.defaultFormatter.html": "prettyhtml",
+  "vetur.format.defaultFormatter.js": "prettier-eslint",
 }
